--- a/index.html
+++ b/index.html
@@ -271,6 +271,18 @@
                   <span class="overlay"><span class="valign"></span><span class="title lng-taste">Slide-Animation</span></span>
                 </a>
               </li>
+              <li class="col-md-4 col-sm-4 col-xs-12 mix bw" data-cat="bw">
+                <a data-toggle="modal" data-target="#rotate" class="mix-cover green">
+                  <img class="vertical" src="img/rotation1.png" alt="Taste">
+                  <span class="overlay"><span class="valign"></span><span class="title lng-rotate">Rotation-Animation</span></span>
+                </a>
+              </li>
+              <li class="col-md-4 col-sm-4 col-xs-12 mix bw" data-cat="bw">
+                <a data-toggle="modal" data-target="#todo" class="mix-cover green">
+                  <img class="vertical" src="img/todolist1.png" alt="Taste">
+                  <span class="overlay"><span class="valign"></span><span class="title lng-todo">Todo-List App</span></span>
+                </a>
+              </li>
             </ul>
           
           
@@ -529,6 +541,40 @@
                   </div>
                   <div class="modal-body">
                     <img class="thumbnail" alt="forest" src="img/taste.png" />
+                  </div>
+                </div><!-- /.modal-content -->
+              </div><!-- /.modal-dialog -->
+            </div><!-- /.modal -->
+            <!-- /Load Photo in Modal -->
+
+            <div class="modal fade" id="rotate" tabindex="-1" role="dialog" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title text-center lng-rotate_1">Rotation-Animation Canvas With SASS and JAVASCRIPT</h4>
+                    <a href="https://facesar.github.io/animation-canvas/dist/" target="_blank"><button type="button"
+                        class="demo lng-rotate_2" aria-hidden="true">Version Demo</button></a>
+                  </div>
+                  <div class="modal-body">
+                    <img class="thumbnail" alt="forest" src="img/rotation.png" />
+                  </div>
+                </div><!-- /.modal-content -->
+              </div><!-- /.modal-dialog -->
+            </div><!-- /.modal -->
+            <!-- /Load Photo in Modal -->
+
+            <div class="modal fade" id="todo" tabindex="-1" role="dialog" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title text-center lng-todo_1">Todo-List App with ReactJS and SASS</h4>
+                    <a href="https://practice-facesar.surge.sh/" target="_blank"><button type="button"
+                        class="demo lng-todo_2" aria-hidden="true">Version Demo</button></a>
+                  </div>
+                  <div class="modal-body">
+                    <img class="thumbnail" alt="forest" src="img/todolist.png" />
                   </div>
                 </div><!-- /.modal-content -->
               </div><!-- /.modal-dialog -->
